Archive2/ca/45f7a1a7c2d6d0/output
main.cpp: In function 'int main()':
main.cpp:5:5: error: 'cin' was not declared in this scope
     cin << n;
     ^
main.cpp:5:5: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/local/include/c++/4.9.0/iostream:60:18: note:   'std::cin'
   extern istream cin;  /// Linked to standard input
                  ^
