Archive2/ca/45f7a1a7c2d6d0/main.cpp
#include <iostream>
int main()
{
    int n;
    cin << n;
    std::cout << n+1;
}
